@@ -79,6 +79,7 @@
         <file>32x32/tor-stopping.png</file>
         <file>32x32/utilities-log-viewer.png</file>
         <file>32x32/utilities-system-monitor.png</file>
+        <file>32x32/view-fullscreen.png</file>
         <file>32x32/view-refresh.png</file>
         <file>32x32/window-close.png</file>
         <file>32x32/zoom-fit-best.png</file>
